1998-07-01  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.cc (create_context): Use module::init.

	* module.h (class module): Update def.
	* module.cc (init): New function.

	* ChangeLog: Fix doc.
	* NEWS: Fix doc.

1998-06-30  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* module.cc (draw_clock): Use GL_AMBIENT_AND_DIFFUSE.
	(draw_clock): Raise the shininess to 8.

	* Version 0.10 released.

	* module.cc (draw_clock): Clear also the depth buffer.
	(draw_clock): Draw a round dial behind the hands.
	(draw_clock): Set the material parameters.

	* glclock.cc (create_context): Enable GL_DEPTH_TEST.
	(create_context): Move the eye position back.

	* NEWS: Update doc.

	* glclock.cc (update): Use module::rotate.

	* module.h (class module): Update definition.
	* module.cc (rotate): New function.

	* glclock.h (class glclock): Add member m.
	* glclock.cc (glclock): Delete member m.
	(glclock): Allocate member m.
	(draw_clock): Removed.
	(handle_expose_event): Use module::draw_clock.

	* Makefile.am (rglclock_SOURCES): Add module.cc.
	(noinst_HEADERS): Add module.h.

	* module.h: New file.
	* module.cc: New file.

1998-06-28  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Version 0.8 released.

	* README: Update description.
	* main.cc: Update description comments.
	* glclock.cc: Update description comments.
	* glclock.h: Update description comments.

	* glclock.cc (glclock): Initialize the new members.
	(draw_clock): Do not reset the model view matrix.
	(update): Rotate the model view matrix.
	(create_context): Initialize the model view matrix.

	* glclock.h (class glclock): Add rot_velocity, rot_x, rot_y, and
	rot_z to the members.

	* glclock.cc (draw_clock): Remove x, y, width, and height from
	args.  Remove a glViewport call.
	(handle_expose_event): Add a glViewport call from draw_clock.
	(handle_expose_event): Release selected context at return.
	(create_context): Likewise.
	(create_context): Use glFrustum instead of gluPerspective.